crates/specforge-mcp/tests/snapshots/tests__prompt_golden__27_infer_kind_empty.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "error": {
    "code": -32602,
    "data": {
      "argument": "scope",
      "code": "invalid_input",
      "message": "Empty kind name in scope 'kind:'",
      "prompt": "specforge://prompts/infer"
    },
    "message": "Empty kind name in scope 'kind:'"
  }
}
