crates/specforge-mcp/tests/snapshots/tests__prompt_golden__28_infer_kind_unknown.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "error": {
    "code": -32602,
    "message": "Unknown entity kind: 'nope'. Check installed extensions."
  }
}
