crates/specforge-mcp/tests/snapshots/tests__prompt_golden__29_infer_file_source.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "description": "Get inference guidance for discovering spec entities from code",
  "instruction": "You are inferring spec entities from the file 'src/login.rs'. The entities listed below already reference this file — do not duplicate them. Use the kind guides to identify new entities.",
  "layout": "turns",
  "payload": {
    "existing_entities_referencing_file": [],
    "file": "src/login.rs",
    "kinds": [
      {
        "inference_guide": "[guide]",
        "kind": "feature"
      },
      {
        "inference_guide": "[guide]",
        "kind": "journey"
      },
      {
        "inference_guide": "[guide]",
        "kind": "deliverable"
      },
      {
        "inference_guide": "[guide]",
        "kind": "milestone"
      },
      {
        "inference_guide": "[guide]",
        "kind": "module"
      },
      {
        "inference_guide": "[guide]",
        "kind": "term"
      },
      {
        "inference_guide": "[guide]",
        "kind": "persona"
      },
      {
        "inference_guide": "[guide]",
        "kind": "channel"
      },
      {
        "inference_guide": "[guide]",
        "kind": "release"
      },
      {
        "inference_guide": "[guide]",
        "kind": "behavior"
      },
      {
        "inference_guide": "[guide]",
        "kind": "invariant"
      },
      {
        "inference_guide": "[guide]",
        "kind": "event"
      },
      {
        "inference_guide": "[guide]",
        "kind": "type"
      },
      {
        "inference_guide": "[guide]",
        "kind": "port"
      }
    ],
    "match_mode": "none",
    "project_conventions": "",
    "validation": "After writing .spec files, call specforge_validate to check for errors (and specforge_analyze for coverage/contract findings). Fix any errors before proceeding."
  },
  "roles": [
    "user",
    "user"
  ]
}
