crates/specforge-mcp/tests/snapshots/tests__prompt_golden__31_infer_file_empty.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "error": {
    "code": -32602,
    "data": {
      "argument": "scope",
      "code": "invalid_input",
      "message": "Empty file path in scope 'file:'",
      "prompt": "specforge://prompts/infer"
    },
    "message": "Empty file path in scope 'file:'"
  }
}
