crates/specforge-mcp/tests/snapshots/tests__prompt_golden__35_unknown_prompt.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&unknown, dir.path())"
---
{
  "error": {
    "code": -32602,
    "message": "Unknown prompt: specforge://prompts/nope"
  }
}
