crates/specforge-mcp/tests/snapshots/tests__prompt_golden__36_no_name.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&no_name, dir.path())"
---
{
  "error": {
    "code": -32602,
    "message": "Missing required parameter: name"
  }
}
